fix overflow completely

--- a/src/style.css
+++ b/src/style.css
@@ -365,6 +365,8 @@ footer {
   -webkit-transform: translateX(-100%);
   transform: translateX(-100%);
   text-align: center;
+  overflow: scroll;
+  max-height: 20em;
 }
 .movie .back .info {
   display: -webkit-flex;
